# whisper

./: Cargo.toml  config.toml
src/: chat.rs  config.rs  lib.rs  main.rs  mcp_adaptor.rs
src/agent/: cli_chat.rs  mod.rs  model_adaptor.rs  session.rs
src/config/: mcp.rs  mod.rs  read_config.rs  read_toml.rs
src/mcp/: manager.rs  mod.rs  tool_adaptor.rs  transport.rs
src/secure/: aes.rs  mod.rs
