[package]
name = "whisper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
dotenvy = "0.15.7"
futures = "0.3.31"
rig-core = { version = "0.20.0", features = ["rmcp"] }
rmcp = "0.6.4"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "std", "fmt"] }
